<resources>
    <string name="app_name">Social A</string>
    <string name="caption">Write a caption</string>
    <string name="purpose">Purpose of this post</string>
    <string name="post">Post</string>
    <string name="new_post">New Post</string>
    <string name="user_name">User Name</string>
    <string name="feedback_caption">Caption</string>
    <string name="reason">Reason</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_email_conf">Confirm Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
</resources>
