<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/post_feedback_bg"
    tools:context=".postFeedbackActivity">

    <ImageView
        android:id="@+id/image_view_photo"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:scaleType="centerCrop"
        android:background="@drawable/feedbackpic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.317" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/oski"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp"
        app:layout_constraintBottom_toBottomOf="@+id/image_view_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="@+id/image_view_photo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.193" />

    <TextView
        android:id="@+id/textView_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="260dp"
        android:layout_marginBottom="28dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/user_name"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/image_view_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/profile_image"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:layout_constraintVertical_bias="0.34" />

    <EditText
        android:id="@+id/editText_caption"
        android:layout_width="337dp"
        android:layout_height="53dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:text="@string/feedback_caption"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_view_photo" />

    <EditText
        android:id="@+id/editText_reason"
        android:layout_width="335dp"
        android:layout_height="70dp"
        android:ems="10"
        android:gravity="top"
        android:inputType="textPersonName"
        android:text="@string/reason"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_view_photo"
        app:layout_constraintVertical_bias="0.363" />

    <Button
        android:id="@+id/add_video_button"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:background="@drawable/addvideobtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.106"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_reason"
        app:layout_constraintVertical_bias="0.645" />

    <Button
        android:id="@+id/post_feedback_button"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="184dp"
        android:layout_height="35dp"
        android:background="@drawable/postfeedbackbtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.823"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_reason"
        app:layout_constraintVertical_bias="0.758" />

    <Button
        android:id="@+id/back_button"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/backbutton"
        app:layout_constraintBottom_toTopOf="@+id/image_view_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.141" />


</android.support.constraint.ConstraintLayout>