<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/edit_feedback_bg"
    tools:context=".EditFeedbackActivity">

    <ImageView
        android:id="@+id/image_view_photo"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:scaleType="centerCrop"
        android:background="@drawable/feedbackpic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.317" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/oski"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp"
        app:layout_constraintBottom_toBottomOf="@+id/image_view_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="@+id/image_view_photo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.193" />

    <TextView
        android:id="@+id/textView_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/user_name"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/image_view_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/profile_image"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:layout_constraintVertical_bias="0.34" />

    <EditText
        android:id="@+id/editText_caption"
        android:layout_width="337dp"
        android:layout_height="53dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:text="@string/feedback_caption"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_view_photo" />

    <EditText
        android:id="@+id/editText_reason"
        android:layout_width="339dp"
        android:layout_height="110dp"
        android:ems="10"
        android:gravity="top"
        android:inputType="textPersonName"
        android:text="@string/reason"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_view_photo"
        app:layout_constraintVertical_bias="0.363" />

    <Button
        android:id="@+id/filter_button"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="47dp"
        android:layout_height="66dp"
        android:background="@drawable/filterbtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tag_button"
        app:layout_constraintHorizontal_bias="0.414"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_reason"
        app:layout_constraintVertical_bias="0.516" />

    <Button
        android:id="@+id/tag_button"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="47dp"
        android:layout_height="64dp"
        android:background="@drawable/tagbtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.354"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_reason" />

    <Button
        android:id="@+id/sticker_button"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="59dp"
        android:layout_height="64dp"
        android:background="@drawable/stickerbtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.625"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_reason" />

    <Button
        android:id="@+id/music_button"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="45dp"
        android:layout_height="64dp"
        android:background="@drawable/musicbtn"
        app:layout_constraintBottom_toBottomOf="@+id/sticker_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toEndOf="@+id/sticker_button"
        app:layout_constraintTop_toBottomOf="@+id/editText_reason"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/back_button"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/backbutton"
        app:layout_constraintBottom_toTopOf="@+id/image_view_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.141" />

    <Button
        android:id="@+id/next_button"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/nextbutton"
        app:layout_constraintBottom_toTopOf="@+id/image_view_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.958"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.141" />


</android.support.constraint.ConstraintLayout>